--- a/lab1/Top_Muliti_IOBUS_envsettings.html
+++ b/lab1/Top_Muliti_IOBUS_envsettings.html
@@ -16,37 +16,37 @@
 <tr>
 <td>PATHEXT</td>
 <td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
+<td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
+<td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
 </tr>
 <tr>
 <td>Path</td>
 <td>C:\Xilinx\13.4\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\13.4\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\13.4\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\13.4\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\13.4\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\13.4\ISE_DS\common\bin\nt64;<br>C:\Xilinx\13.4\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\Parallels\Parallels Tools\Applications;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files (x86)\Windows Kits\8.1\Windows Performance Toolkit\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files (x86)\Microsoft SDKs\TypeScript\1.0\</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>C:\Xilinx\13.4\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\13.4\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\13.4\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\13.4\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\13.4\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\13.4\ISE_DS\common\bin\nt64;<br>C:\Xilinx\13.4\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\Parallels\Parallels Tools\Applications;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files (x86)\Windows Kits\8.1\Windows Performance Toolkit\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files (x86)\Microsoft SDKs\TypeScript\1.0\</td>
+<td>C:\Xilinx\13.4\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\13.4\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\13.4\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\13.4\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\13.4\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\13.4\ISE_DS\common\bin\nt64;<br>C:\Xilinx\13.4\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\Parallels\Parallels Tools\Applications;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files (x86)\Windows Kits\8.1\Windows Performance Toolkit\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files (x86)\Microsoft SDKs\TypeScript\1.0\</td>
+<td>C:\Xilinx\13.4\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\13.4\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\13.4\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\13.4\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\13.4\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\13.4\ISE_DS\common\bin\nt64;<br>C:\Xilinx\13.4\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\Parallels\Parallels Tools\Applications;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files (x86)\Windows Kits\8.1\Windows Performance Toolkit\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files (x86)\Microsoft SDKs\TypeScript\1.0\</td>
 </tr>
 <tr>
 <td>XILINX</td>
 <td>C:\Xilinx\13.4\ISE_DS\ISE\</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>C:\Xilinx\13.4\ISE_DS\ISE\</td>
+<td>C:\Xilinx\13.4\ISE_DS\ISE\</td>
+<td>C:\Xilinx\13.4\ISE_DS\ISE\</td>
 </tr>
 <tr>
 <td>XILINX_DSP</td>
 <td>C:\Xilinx\13.4\ISE_DS\ISE</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>C:\Xilinx\13.4\ISE_DS\ISE</td>
+<td>C:\Xilinx\13.4\ISE_DS\ISE</td>
+<td>C:\Xilinx\13.4\ISE_DS\ISE</td>
 </tr>
 <tr>
 <td>XILINX_PLANAHEAD</td>
 <td>C:\Xilinx\13.4\ISE_DS\PlanAhead</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>C:\Xilinx\13.4\ISE_DS\PlanAhead</td>
+<td>C:\Xilinx\13.4\ISE_DS\PlanAhead</td>
+<td>C:\Xilinx\13.4\ISE_DS\PlanAhead</td>
 </tr>
 </TABLE>
 <A NAME="Synthesis Property Settings"></A>
@@ -87,7 +87,7 @@
 <tr>
 <td>-p</td>
 <td>&nbsp;</td>
-<td>xa3s100e-4-vqg100</td>
+<td>xa3s500e-4-cpg132</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
@@ -337,6 +337,126 @@
 <td>0%</td>
 </tr>
 </TABLE>
+<A NAME="Translation Property Settings"></A>
+&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'>
+<TD ALIGN=CENTER COLSPAN='4'><B>Translation Property Settings </B></TD>
+</tr>
+<tr bgcolor='#ffff99'>
+<td><b>Switch Name</b></td>
+<td><b>Property Name</b></td>
+<td><b>Value</b></td>
+<td><b>Default Value</b></td>
+</tr>
+<tr>
+<td>-intstyle</td>
+<td>&nbsp;</td>
+<td>ise</td>
+<td>None</td>
+</tr>
+<tr>
+<td>-dd</td>
+<td>&nbsp;</td>
+<td>_ngo</td>
+<td>None</td>
+</tr>
+<tr>
+<td>-p</td>
+<td>&nbsp;</td>
+<td>xa3s500e-cpg132-4</td>
+<td>None</td>
+</tr>
+<tr>
+<td>-sd</td>
+<td>Macro Search Path</td>
+<td>ipcore_dir</td>
+<td>None</td>
+</tr>
+</TABLE>
+<A NAME="Map Property Settings"></A>
+&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'>
+<TD ALIGN=CENTER COLSPAN='4'><B>Map Property Settings </B></TD>
+</tr>
+<tr bgcolor='#ffff99'>
+<td><b>Switch Name</b></td>
+<td><b>Property Name</b></td>
+<td><b>Value</b></td>
+<td><b>Default Value</b></td>
+</tr>
+<tr>
+<td>-ir</td>
+<td>Use RLOC Constraints</td>
+<td>OFF</td>
+<td>OFF</td>
+</tr>
+<tr>
+<td>-cm</td>
+<td>Optimization Strategy (Cover Mode)</td>
+<td>area</td>
+<td>area</td>
+</tr>
+<tr>
+<td>-intstyle</td>
+<td>&nbsp;</td>
+<td>ise</td>
+<td>None</td>
+</tr>
+<tr>
+<td>-o</td>
+<td>&nbsp;</td>
+<td>Top_Muliti_IOBUS_map.ncd</td>
+<td>None</td>
+</tr>
+<tr>
+<td>-pr</td>
+<td>Pack I/O Registers/Latches into IOBs</td>
+<td>off</td>
+<td>off</td>
+</tr>
+<tr>
+<td>-p</td>
+<td>&nbsp;</td>
+<td>xa3s500e-cpg132-4</td>
+<td>None</td>
+</tr>
+</TABLE>
+<A NAME="Place and Route Property Settings"></A>
+&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'>
+<TD ALIGN=CENTER COLSPAN='4'><B>Place and Route Property Settings </B></TD>
+</tr>
+<tr bgcolor='#ffff99'>
+<td><b>Switch Name</b></td>
+<td><b>Property Name</b></td>
+<td><b>Value</b></td>
+<td><b>Default Value</b></td>
+</tr>
+<tr>
+<td>-t</td>
+<td>&nbsp;</td>
+<td>1</td>
+<td>1</td>
+</tr>
+<tr>
+<td>-intstyle</td>
+<td>&nbsp;</td>
+<td>ise</td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td>-ol</td>
+<td>Place & Route Effort Level (Overall)</td>
+<td>high</td>
+<td>std</td>
+</tr>
+<tr>
+<td>-w</td>
+<td>&nbsp;</td>
+<td>true</td>
+<td>false</td>
+</tr>
+</TABLE>
 <A NAME="Operating System Information"></A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
@@ -352,30 +472,30 @@
 <tr>
 <td>CPU Architecture/Speed</td>
 <td>Intel(R) Core(TM) i5-4278U CPU @ 2.60GHz/2600 MHz</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td>Intel(R) Core(TM) i5-4278U CPU @ 2.60GHz/2600 MHz</td>
+<td>Intel(R) Core(TM) i5-4278U CPU @ 2.60GHz/2600 MHz</td>
+<td>Intel(R) Core(TM) i5-4278U CPU @ 2.60GHz/2600 MHz</td>
 </tr>
 <tr>
 <td>Host</td>
 <td>TERENCE84D2</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td>TERENCE84D2</td>
+<td>TERENCE84D2</td>
+<td>TERENCE84D2</td>
 </tr>
 <tr>
 <td>OS Name</td>
 <td>Microsoft Windows 7 , 64-bit</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td>Microsoft Windows 7 , 64-bit</td>
+<td>Microsoft Windows 7 , 64-bit</td>
+<td>Microsoft Windows 7 , 64-bit</td>
 </tr>
 <tr>
 <td>OS Release</td>
 <td>Service Pack 1  (build 7601)</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td>Service Pack 1  (build 7601)</td>
+<td>Service Pack 1  (build 7601)</td>
+<td>Service Pack 1  (build 7601)</td>
 </tr>
 </TABLE>
 </BODY> </HTML>
